k8s/hosthaven/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosthaven
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /reservations/
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth/
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
